@@ -1,0 +1,59 @@
+# -*-tcl-*-
+::msgcat::mcmset de {
+    "&File"                 "&Datei"
+    "&Preferences"          "&Einstellungen"
+    "&Emoticons"            "E&moticons"
+    "&Visibility"           "&Visibility"
+    "&Alerts"               "&Alerts"
+    "&Debug"                "&Debug"
+    "&Help"                 "&Hilfe"
+
+    "&Login"                "&Login"
+    "&Logout"               "Aus&loggen"
+    "Login via &IRC..."     "Login via &IRC..."
+    "&Save options"         "&Speichern options"
+    "Open &whiteboard"      "\u00d6ffnen &whiteboard"
+    "Open &paste dialog"    "\u00d6ffnen &paste dialog"
+    "&Install application"  "&Install application"
+    "E&xit"                 "&Ende"
+
+    "&Display online users" "&Display online users"
+    "&Enable whiteboard"    "&Enable whiteboard"
+    "Auto &bookmark"        "Auto &bookmark"
+    "Auto-i&nit Babelfish"  "Auto-i&nit Babelfish"
+
+    "&Colors..."            "&Farbe..."
+    "&Font..."              "&Schriftart..."
+    "&User details..."      "&User details..."
+    "&Input method..."      "&Input method..."
+    "&Options..."           "&Einstellungen..."
+    "&Tk themes"            "&Tk themes"
+
+    "&Quick help..."        "&Schnell hilfe..."
+    "Help (&wiki)..."       "Hilfe (&wiki)..."
+    "&Check version"        "&Check version"
+    "&View Change&Log..."   "&View ChangeLog..."
+    "&About..."             "&\u00dcber..."
+
+    "Hide user"             "Hide user"
+    "Set/Unset bookmark"    "Set/Unset bookmark"
+    "Prev bookmark"         "Vorige bookmark"
+    "Next bookmark"         "N\u00e4chste bookmark"
+    "Clear bookmarks"       "Clear bookmarks"
+    "Google selection"      "Google selection"
+
+    "Initialize translation" "Initialize translation"
+    "Translate selection"    "Translate selection"
+
+    OK     "OK"
+    Cancel "Abbruch"
+    Close  "Schlie\u00dfen"
+    Reply  "Reply"
+    Ready  "Ready"
+
+    "Subscribe request from %s" "Subskriptionsanfrage von %s"
+
+    "Subject" "Subject"
+    "%s - tkchat message" "%s - tkchat message"
+    "Re: %s" "Re: %s"
+}
