@@ -1,0 +1,65 @@
+# -*-tcl-*-
+::msgcat::mcmset en {
+    "&File"                 "&File"
+    "&Preferences"          "&Preferences"
+    "&Emoticons"            "&Emoticons"
+    "&Visibility"           "&Visibility"
+    "&Alerts"               "&Alerts"
+    "&Debug"                "&Debug"
+    "&Help"                 "&Help"
+
+    "&Login"                "&Connect"
+    "&Logout"               "&Disconnect"
+    "Login via &IRC..."     "Login via &IRC..."
+    "&Save options"         "&Save options"
+    "Open &whiteboard"      "Open &whiteboard"
+    "Open &paste dialog"    "Open &paste dialog"
+    "&Install application"  "&Install application"
+    "E&xit"                 "E&xit"
+
+    "&Display online users" "&Display online users"
+    "&Enable whiteboard"    "&Enable whiteboard"
+    "Auto &bookmark"        "Auto &bookmark"
+    "Auto-i&nit Babelfish"  "Auto-i&nit Babelfish"
+
+    "&Colors..."            "&Colors..."
+    "&Font..."              "&Font..."
+    "&User details..."      "&User details..."
+    "&Input method..."      "&Input method..."
+    "&Options..."           "&Options..."
+    "&Tk themes"            "&Tk themes"
+
+    "&Quick help..."        "&Quick help..."
+    "Help (&wiki)..."       "Help (&wiki)..."
+    "&Check version"        "&Check version"
+    "&View Change&Log..."   "&View ChangeLog..."
+    "&About..."             "&About..."
+
+    "Hide user"             "Hide user"
+    "Set/Unset bookmark"    "Set/Unset bookmark"
+    "Prev bookmark"         "Prev bookmark"
+    "Next bookmark"         "Next bookmark"
+    "Clear bookmarks"       "Clear bookmarks"
+    "Google selection"      "Google selection"
+
+    "Initialize translation" "Initialize translation"
+    "Translate selection"    "Translate selection"
+
+    OK     "OK"
+    Cancel "Cancel"
+    Close  "Close"
+    Reply  "Reply"
+    Ready  "Ready"
+
+    "All users" "All users"
+    "Disconnected from jabber server." "Disconnected from jabber server."
+    "Connected to %s, sending credentials." "Connected to %s, sending credentials."
+
+    "Load History From Logs" "Load History From Logs"
+    "Please select how far back you want to load:" \
+        "Please select how far back you want to load:"
+
+    "Subject" "Subject"
+    "%s - tkchat message" "%s - tkchat message"
+    "Re: %s" "Re: %s"
+}
